[package]
name = "socksx"
version = "0.1.2"
description = "A SOCKS toolkit for Rust"
authors = ["Onno Valkering"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
clap = { version = "4.4", features = ["derive", "env"] }
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
human-panic = "1"
itertools = "0.11"
libc = "0.2"
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
url = "2.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["net","socket"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51", features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
chacha20 = "0.9"
pin-project-lite = "0.2"
