[package]
name = "socksx"
version = "2.0.0"
description = "A SOCKS toolkit for Rust"
authors = ["Anmol Bhatia", "Tim Müller", "Onno Valkering"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.4"
async-trait = "0.1.0"
bytes = "1.0.0"
clap = { version = "4.4.0", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.0"
futures = "0.3"
human-panic = "2.0.0"
itertools = "0.13.0"
libc = "0.2.156"
log = "0.4.8"
num-derive = "0.4.0"
num-traits = "0.2.0"
thiserror = "1.0.0"
tokio = { version = "1.5.0", features = ["full"] }
url = "2.2.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["net","socket"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.0", features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
chacha20 = "0.9.0"
pin-project-lite = "0.2.0"
